# Cosmwasm-Basic

./: Cargo.toml
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  test.rs
src/multitest/: contract.rs  tests.rs
