[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.2"
serde = "1.0.144"
cw-storage-plus = "0.15.0"
schemars = "0.8.15"
cosmwasm-schema = "1.4.1"

[dev-dependencies]
cw-multi-test = "0.13.4"
